--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,19 @@
         </div>
         <div class="main-container">
             <div class="main wrapper clearfix">
+
+                <article class="flashed">
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul>
+                                {% for message in messages %}
+                                <li>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endwith %}
+                </article>
+                
                 {% block content %}
                 {% endblock %}
 
